--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,4 +9,20 @@ jobs:
 
     steps:
     - name: Mensaje
-      run: echo "Hola Mundo"
+      run: echo "Hola mundo !!! " 
+    - name: Touch File
+      run: |
+          touch hola.txt
+          ls -al
+    -  name: Set text
+       run: |
+            echo "Hola mundo" >> hola.txt
+    -  name: Read File #Lee
+       run: cat hola.txt
+
+  dos:
+    runs-on: ubuntu-latest
+    needs: [uno]
+    steps:
+    - name: Directorio
+      run: ls -al
