--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,7 +12,7 @@ jobs:
       run: echo "Hola mundo !!! " 
     - name: Touch File
       run: |
-          touch hola.txt
+          touch hola.txt 
           ls -al
     -  name: Set text
        run: |
@@ -30,3 +30,8 @@ jobs:
       uses: actions/checkout@v4.2.1
     - name: Directorio
       run: ls -al
+
+      -name: Instalar
+      run: |
+        cd .github/workflows
+        ls -al
