--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,3 +35,8 @@ jobs:
       run: |
         cd .github/workflows
         ls -al
+        chmod +x script.sh
+        ls -al
+        ./script.sh
+        
+        
